# volcengine_status

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ark_usage.rs  lib.rs  main.rs  state.rs  tray.rs
src/components/: AuthBanner.tsx  HeaderBar.tsx  InstallBanner.tsx  PeriodRow.tsx  PlanCard.tsx  SettingsPanel.tsx
src/lib/: format.ts  runtime.ts  settings.ts  types.ts
