[package]
name = "volcengine_status"
version = "1.0.1"
description = "macOS menu bar app for Volcengine Ark plan usage"
authors = ["LathamZhao"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash with the bin target on Windows.
name = "volcengine_status_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
